--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.1.6",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/typeorm": "^9.0.1",
@@ -41,6 +42,7 @@
     "cross-env": "^7.0.3",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
+    "mongoose": "^6.7.1",
     "mysql2": "^2.3.3",
     "nestia-helper": "^3.1.8",
     "passport-jwt": "^4.0.0",
@@ -101,7 +103,8 @@
       "@COMMON/(.*)$": "<rootDir>/../src/api/common/$1",
       "@ACCOUNT/(.*)$": "<rootDir>/../src/api/account/$1",
       "@USER/(.*)$": "<rootDir>/../src/api/user/$1",
-      "@CRYPTO/(.*)$": "<rootDir>/../src/api/crypto/$1"
+      "@CRYPTO/(.*)$": "<rootDir>/../src/api/crypto/$1",
+      "@STORE/(.*)$": "<rootDir>/../src/api/store/$1"
     },
     "coveragePathIgnorePatterns": [
       "main.ts",
