--- a/package.json
+++ b/package.json
@@ -36,20 +36,17 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
-    "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
     "mongoose": "^6.7.1",
-    "mysql2": "^2.3.3",
     "nestia-helper": "^3.1.8",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
-    "typeorm": "^0.3.10",
     "typescript-json": "^3.3.21"
   },
   "devDependencies": {
@@ -116,7 +113,7 @@
       ".decorator.ts",
       ".guard.ts",
       ".strategy.ts",
-      ".typeorm.ts",
+      ".mongoose.ts",
       ".provider.ts",
       ".provider.ts",
       ".interceptor.ts",
